--- a/q/210976.html
+++ b/q/210976.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>Hussy.Net</td><td>240415T011143Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/272588#272588">Hazel へい</a></td></tr>
-<tr d-ix="1"><td>041</td><td>Rust</td><td>240213T064714Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/270045#270045">Joonas</a></td></tr>
-<tr d-ix="2"><td>011</td><td>YASEPL</td><td>240212T184821Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/270026#270026">madeforl</a></td></tr>
-<tr d-ix="3"><td>025</td><td>Perl 5</td><td>240212T174921Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/270025#270025">Xcali</a></td></tr>
-<tr d-ix="4"><td>017</td><td>Hussy.Net</td><td>240211T224441Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/270000#270000">Hazel へい</a></td></tr>
-<tr d-ix="5"><td>058</td><td>><x></td><td>231129T213409Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/267179#267179">Bee H.</a></td></tr>
-<tr d-ix="6"><td>016</td><td>Uiua 0.3.1</td><td>231129T143105Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/267174#267174">RomanPro</a></td></tr>
+<tr d-ix="0"><td>012</td><td>Uiua</td><td>231129T143105Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/267174#267174">RomanPro</a></td></tr>
+<tr d-ix="1"><td>017</td><td>Hussy.Net</td><td>240415T011143Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/272588#272588">Hazel へい</a></td></tr>
+<tr d-ix="2"><td>041</td><td>Rust</td><td>240213T064714Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/270045#270045">Joonas</a></td></tr>
+<tr d-ix="3"><td>011</td><td>YASEPL</td><td>240212T184821Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/270026#270026">madeforl</a></td></tr>
+<tr d-ix="4"><td>025</td><td>Perl 5</td><td>240212T174921Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/270025#270025">Xcali</a></td></tr>
+<tr d-ix="5"><td>017</td><td>Hussy.Net</td><td>240211T224441Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/270000#270000">Hazel へい</a></td></tr>
+<tr d-ix="6"><td>058</td><td>><x></td><td>231129T213409Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/267179#267179">Bee H.</a></td></tr>
 <tr d-ix="7"><td>007</td><td>Vyxal 3</td><td>231129T140001Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/267172#267172">pacman25</a></td></tr>
 <tr d-ix="8"><td>009</td><td>///</td><td>231120T192102Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/266942#266942">Philippo</a></td></tr>
 <tr d-ix="9"><td>041</td><td>JavaScript Node.js</td><td>231120T080643Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/266924#266924">l4m2</a></td></tr>
@@ -154,7 +154,15 @@
 <tr d-ix="125"><td>034</td><td>Python 3</td><td>200912T132841Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/210981#210981">Jonathan</a></td></tr>
 <tr d-ix="126"><td>008</td><td>Pyth</td><td>200912T132447Z</td><td><a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol/210979#210979">Mukundan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/tacosontitan/Hussy.Net" rel="nofollow noreferrer">Hussy.Net</a>, 17 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <strike>0.3.1</strike> 0.11.0, <strike>16</strike> 12 <a href="https://codegolf.stackexchange.com/questions/247669/i-want-8-bits-for-every-character/265917#265917">bytes</a></h1>
+<p><a href="https://uiua.org/pad?src=0_3_1__4o2iKCZwZiJvbCIpMSZwZkBMCg==" rel="nofollow noreferrer">Original solution</a>:</p>
+<pre><code>⍢(&amp;pf&quot;ol&quot;)1&amp;pf@L
+</code></pre>
+<p><a href="https://uiua.org/pad?src=0_11_0-dev_1__IyBFeHBlcmltZW50YWwhCuKNoiJvbCLigL8mcGYxQEwK" rel="nofollow noreferrer">New solution</a> by <a href="https://codegolf.stackexchange.com/questions/210976/lolololololololololololol#comment588647_267174">Tbw</a>:</p>
+<pre><code>⍢&quot;ol&quot;‿&amp;pf1@L
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/tacosontitan/Hussy.Net" rel="nofollow noreferrer">Hussy.Net</a>, 17 bytes</h1>
 <pre class="lang-csharp prettyprint-override"><code>A(&quot;L&quot;);R(A,&quot;ol&quot;);
 </code></pre>
 <h2>Explanation</h2>
@@ -164,22 +172,22 @@
            &quot;ol&quot;);  // Specify the data as &quot;ol&quot;.
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>Rust, 41 bytes</h1>
+<div id="pu2" class="pu"><h1>Rust, 41 bytes</h1>
 <pre><code>fn main(){print!(&quot;L&quot;);loop{print!(&quot;ol&quot;)}}
 </code></pre>
 <p><a href="https://tio.run/##KyotLvn/Py1PITcxM09Ds7qgKDOvRFFDyUdJ0zonP78ALpCfo6RZW/v/PwA" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/madeforlosers/YASEPL-esolang/" rel="nofollow noreferrer">YASEPL</a>, 11 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/madeforlosers/YASEPL-esolang/" rel="nofollow noreferrer">YASEPL</a>, 11 bytes</h1>
 <pre><code>#&quot;L&quot;#&quot;ol&quot;?2
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 25 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 25 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>print&quot;L&quot;;print'ol'while 1
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9/7@gKDOvRMlHyRrMUM/PUS/PyMxJVTD8//9ffkFJZn5e8X9dX1M9A0MDAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/tacosontitan/Hussy.Net" rel="nofollow noreferrer">Hussy.Net</a>, 17 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/tacosontitan/Hussy.Net" rel="nofollow noreferrer">Hussy.Net</a>, 17 bytes</h1>
 <pre class="lang-cs prettyprint-override"><code>A(&quot;L&quot;);R(A,&quot;ol&quot;);
 </code></pre>
 <ul>
@@ -187,7 +195,7 @@
 <li><code>R</code> is a repeater function that repeats the specified action with the specified input until an optionally specified escape condition is met.</li>
 </ul>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://esolangs.org/wiki/Dead_fish" rel="nofollow noreferrer">&gt;&lt;x&gt;</a>, 58 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://esolangs.org/wiki/Dead_fish" rel="nofollow noreferrer">&gt;&lt;x&gt;</a>, 58 bytes</h1>
 <p>Makes use of the fact that the accumulator is bound to the range <code>[0, 255]</code>.</p>
 <pre><code>iiissdddddoddsiiiiiiii&gt;iiiov
                       ^oddd&lt;
@@ -213,11 +221,6 @@
  o       Print the ASCII value of the accumulator, &quot;l&quot;
 ^        Force the IP upward
 </code></pre>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> 0.3.1, 16 <a href="https://codegolf.stackexchange.com/questions/247669/i-want-8-bits-for-every-character/265917#265917">bytes</a></h1>
-<pre><code>⍢(&amp;pf&quot;ol&quot;)1&amp;pf@L
-</code></pre>
-<p><a href="https://uiua.org/pad?src=0_3_1__4o2iKCZwZiJvbCIpMSZwZkBMCg==" rel="nofollow noreferrer">See it in action</a></p>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 7 bytes</h1>
 <pre><code>'L{§ᶴol
