--- a/q/272546.html
+++ b/q/272546.html
@@ -26,20 +26,37 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>032</td><td>Haskell</td><td>240415T021316Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272589#272589">xnor</a></td></tr>
-<tr d-ix="1"><td>063</td><td>C GCC</td><td>240414T141835Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272571#272571">Mukundan</a></td></tr>
-<tr d-ix="2"><td>066</td><td>Matlab</td><td>240414T141534Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272570#272570">Xenox</a></td></tr>
-<tr d-ix="3"><td>052</td><td>JavaScript</td><td>240414T161746Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272574#272574">m90</a></td></tr>
-<tr d-ix="4"><td>053</td><td>JavaScript V8</td><td>240413T224340Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272552#272552">l4m2</a></td></tr>
-<tr d-ix="5"><td>061</td><td>Python 2</td><td>240413T191539Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272548#272548">pxeger</a></td></tr>
-<tr d-ix="6"><td>006</td><td>Vyxal</td><td>240414T041603Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272557#272557">lyxal</a></td></tr>
-<tr d-ix="7"><td>008</td><td>Jelly</td><td>240414T022143Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272556#272556">Bubbler</a></td></tr>
-<tr d-ix="8"><td>043</td><td>Wolfram Language Mathematica</td><td>240414T011045Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272554#272554">att</a></td></tr>
-<tr d-ix="9"><td>036</td><td>Charcoal</td><td>240413T201407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272549#272549">Neil</a></td></tr>
-<tr d-ix="10"><td>009</td><td>Jelly</td><td>240413T191502Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272547#272547">Jonathan</a></td></tr>
-<tr d-ix="11"><td>011</td><td>Vyxal 3</td><td>240413T205045Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272550#272550">math sca</a></td></tr>
+<tr d-ix="0"><td>007</td><td>05AB1E</td><td>240415T122705Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272599#272599">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>032</td><td>Haskell</td><td>240415T021316Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272589#272589">xnor</a></td></tr>
+<tr d-ix="2"><td>063</td><td>C GCC</td><td>240414T141835Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272571#272571">Mukundan</a></td></tr>
+<tr d-ix="3"><td>066</td><td>Matlab</td><td>240414T141534Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272570#272570">Xenox</a></td></tr>
+<tr d-ix="4"><td>052</td><td>JavaScript</td><td>240414T161746Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272574#272574">m90</a></td></tr>
+<tr d-ix="5"><td>053</td><td>JavaScript V8</td><td>240413T224340Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272552#272552">l4m2</a></td></tr>
+<tr d-ix="6"><td>061</td><td>Python 2</td><td>240413T191539Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272548#272548">pxeger</a></td></tr>
+<tr d-ix="7"><td>006</td><td>Vyxal</td><td>240414T041603Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272557#272557">lyxal</a></td></tr>
+<tr d-ix="8"><td>008</td><td>Jelly</td><td>240414T022143Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272556#272556">Bubbler</a></td></tr>
+<tr d-ix="9"><td>043</td><td>Wolfram Language Mathematica</td><td>240414T011045Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272554#272554">att</a></td></tr>
+<tr d-ix="10"><td>036</td><td>Charcoal</td><td>240413T201407Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272549#272549">Neil</a></td></tr>
+<tr d-ix="11"><td>009</td><td>Jelly</td><td>240413T191502Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272547#272547">Jonathan</a></td></tr>
+<tr d-ix="12"><td>011</td><td>Vyxal 3</td><td>240413T205045Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272550#272550">math sca</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 32 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 7 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>∞ʒÒ&lt;O3Ö
+</code></pre>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/272556/52210"><em>@Bubbler</em>'s Jelly answer</a>, but with an infinite list instead.</p>
+<p><a href="https://tio.run/##yy9OTMpM/f//Uce8U5MOT7LxNz487f9/AA" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>∞        # Push an infinite positive list: [1,2,3,...]
+ ʒ       # Filter it by:
+  Ò      #  Get the prime factors of the current integer, including duplicates
+   &lt;     #  Decrease each by 1
+    O    #  Take the sum of that
+     3Ö  #  Check whether it's divisible by 3
+         # (after which the filtered infinite list is lazy output implicitly as result)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 32 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>[n|n&lt;-[1..],mod(gcd(6^n)n^2)7&lt;2]
 </code></pre>
@@ -53,7 +70,7 @@
 <p>Uses <a href="https://codegolf.stackexchange.com/a/272574/20260">m90's fantastic solution</a> of outputting numbers whose base 7 representations have their last nonzero digit as either 1 or 6. Because multiplying by 2 or 3 cycles between this digit being in {1,6}, {2,5}, or {3,4}, exactly one of <code>n, 2*n, 3*n</code> will satisfy this property.</p>
 <p>The code first casts out factors of 7 by dividing <code>n</code> by its <code>gcd</code> with some high power of 7. Then, it checks if its square equals 1 modulo 7, and if so outputs this <code>n</code>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C (GCC)</a>, 63 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C (GCC)</a>, 63 bytes</h1>
 <pre class="lang-c prettyprint-override"><code>i;main(j){for(;;~j%7%3||printf(&quot;%d &quot;,i))for(j=++i;j%7&lt;1;)j/=7;}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m700OT49OXnBgqWlJWm6FjftM61zEzPzNLI0q9PyizSsreuyVM1VjWtqCooy80rSNJRUUxSUdDI1NUGyWbba2pnWQAU2htaaWfq25ta1EGOgpsFMBQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -65,7 +82,7 @@
 <p><a href="https://tio.run/##FclBCoAgEADAr0QguJREeNx8i5RhrFsWYZeytxvNdZxanCuFcBspytAyPH4/JSILnfNxUkxe1mKu6pYA/mJj7XTRmihal24ZTNMQYBB66DF0RgMrhW8pHw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/272550/91267">@math scat's answer</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.mathworks.com/products/matlab.html" rel="nofollow noreferrer">Matlab</a>, <s>69</s> 66 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.mathworks.com/products/matlab.html" rel="nofollow noreferrer">Matlab</a>, <s>69</s> 66 bytes</h1>
 
 <pre class="lang-matlab prettyprint-override"><code>i=1;a=[];while 1;if all(a-i);disp(i);a=[a [2:4 9]*i];end;i=i+1;end
 </code></pre>
@@ -74,7 +91,7 @@
 Matlab also has a <a href="https://www.mathworks.com/help/matlab/ref/double.union.html" rel="nofollow noreferrer">union function</a>, but it would cost 5 bytes.</p>
 <p>-3 bytes thanks to Luis Mendo</p>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript, 52 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript, 52 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>h=x=&gt;x%7||h(x/7)
 for(n=0;;)~h(++n)%3||console.log(n)
@@ -82,7 +99,7 @@ for(n=0;;)~h(++n)%3||console.log(n)
 <p><a href="https://tio.run/##y0osSyxOLsosKNEtLshMSS3Kzc/LTq38/z/DtsLWrkLVvKYmQ6NC31yTKy2/SCPP1sDaWrMuQ0NbO09T1bimJjk/rzg/J1UvJz9dI0/z/38A" rel="nofollow noreferrer" title="JavaScript (SpiderMonkey) – Try It Online">Try it online!</a></p>
 <p>This works because <span class="math-container">\$(\mathbb{Z}/7\mathbb{Z})^{\times}/\{1,-1\}\cong C_3\$</span>, with <span class="math-container">\$\{1,2,3\}\$</span> mapping to the three distinct elements of <span class="math-container">\$C_3\$</span>, so that for <span class="math-container">\$n\$</span> not divisible by 7, <span class="math-container">\$\{n,2n,3n\}\$</span> also map to the three distinct elements of <span class="math-container">\$C_3\$</span>.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 53 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 53 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>for(i=1;g=i=&gt;i%3?i&amp;-i:g(i/3*4);i++)g(i)%7-1||print(i)
 </code></pre>
@@ -105,7 +122,7 @@ for(n=0;;)~h(++n)%3||console.log(n)
 <p>For cardinality thing, obviously 1 can be chosen or unchosen, 5 can, 5<sup>2</sup> can...; = 2<sup>N</sup></p>
 <p>For density thing, <a href="https://tio.run/##FcxBCoAgEADA1wS7bZHlJZKtt0SQbkKFiSf/bnWa2xxrWp8tyB3bNJaynZGV2a8Awr2x7HmWyi9q6smCrx0aIUKw4HjA9kcjVjrnO8gZQRqir@gES3kB" rel="nofollow noreferrer">this solution goes to 0.472</a>, which I'd say far enough to reject 1/3 assumption</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 61 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 61 bytes</h1>
 <pre><code>i,=a={0}
 while 1:
  if{i}-a:print i;a|={i*2,i*3,i*4,i*9}
@@ -116,7 +133,7 @@ while 1:
 <p>This is <a href="https://oeis.org/A339746" rel="nofollow noreferrer">A339746</a>, same as <a href="https://codegolf.stackexchange.com/a/272549">Neil's answer</a>.</p>
 <p><a href="https://chat.stackexchange.com/transcript/message/65499090#65499090">Method found by math scat</a> as a simple fix for my initial idea (which they also thought of independently).</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
 <pre><code>ǐ‹∑₃)ȯ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLHkOKAueKIkeKCgynIryIsIiIsIjMxIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -132,14 +149,14 @@ while 1:
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 8 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 8 bytes</h1>
 <pre><code>Æf’S3ḍµ#
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8//9wW9qjhpnBxg939B7aqvz/v7ERAA" rel="noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 <p>A positive integer <span class="math-container">\$n = 2^a 3^b 5^c 7^d \cdots\$</span> belongs to a group identified by <span class="math-container">\$5^c 7^d \cdots\$</span> (i.e. the largest divisor of <span class="math-container">\$n\$</span> without prime factors 2 and 3). We can choose different <span class="math-container">\$a-b \operatorname{mod} 3\$</span> for each group, as long as the choice is consistent within a group.</p>
 <p>Given <span class="math-container">\$n\$</span>, <code>Æf</code> gives a flat list of primes whose product is <span class="math-container">\$n\$</span>, i.e. <span class="math-container">\$a\$</span> copies of 2, <span class="math-container">\$b\$</span> copies of 3, and so on. <code>’</code> decrements each element, and <code>S</code> gives the sum, which is <span class="math-container">\$1a + 2b + 4c + 6d + \cdots\$</span>. Within each group, <span class="math-container">\$4c + 6d + \cdots\$</span> is constant, and 2 is equal to -1 modulo 3, so the code selects the numbers where <span class="math-container">\$a - b \operatorname{mod} 3\$</span> is some constant within each group.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 43 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 43 bytes</h1>
 <pre><code>f@n_:=f[2n|3n|4n|9n]=Print@n
 f@i~Do~{i,∞}
 </code></pre>
@@ -155,7 +172,7 @@ We can fully define such a set by choosing <span class="math-container">\$c_n\$<
 \frac{43}{91}\approx0.47253.$$</span></li>
 </ul>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 36 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 36 bytes</h1>
 <pre><code>Ｎθ≔⁰ηＷ‹ⅉθ«≦⊕η¿¬﹪↨Ｅ23⌕Ｘ⁰⮌↨ηＩκ⁰±¹¦³⟦Ｉη
 </code></pre>
 <p><a href="https://tio.run/##LY3BCsIwDIbP7imCpxQqTHf0pIIwcEO8iXioW1yLs51t5w7is9dOzSHkT77wVVLYyog2hFx3vS/7@4UsPtgyWTmnGo0pBxnTIFVLgDtyDo/IODwYg1cyKUT3B3NdWbqT9lT/XibqClgaj4Wp@9bgWjjCyON0kU05bJWucW@GqIuOAz3JxvsXkhw2wnm8sVgc0rGV1AhPOB/nLK5hb5X2ePqCkp2j8B3CPE3D7Nl@AA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -182,7 +199,7 @@ We can fully define such a set by choosing <span class="math-container">\$c_n\$<
 </code></pre>
 <p>Output the current value on its own line.</p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 9 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 9 bytes</h1>
 <pre><code>ọⱮ3IṪ3ḍµ#
 </code></pre>
 <p>A full program that accepts a number, <span class="math-container">\$n\$</span>, from stdin and prints a Jelly representation of a list of the first <span class="math-container">\$n\$</span> natural numbers for which the difference in its order of two and three differ by a multiple of three (<a href="https://codegolf.stackexchange.com/a/272549/53748">Neil's discovery</a>).</p>
@@ -198,7 +215,7 @@ We can fully define such a set by choosing <span class="math-container">\$c_n\$<
           - implicit print
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 11 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 11 bytes</h1>
 <pre><code>ÞṆΩ2Mn3M-3Ḋ
 </code></pre>
 <p>Outputs <a href="https://oeis.org/A339746" rel="nofollow noreferrer">A339746</a> as an infinite sequence.</p>
