--- a/q/271933.html
+++ b/q/271933.html
@@ -53,6 +53,8 @@
 <li><code>o</code>: <code>‘OO‘™θ</code> - <a href="https://tio.run/##yy9OTMpM/f//UcMMf38g8ahl0bkd//8DAA" rel="nofollow noreferrer">Try it online</a>;</li>
 <li><code>anu</code>: <code>'¢‚Ù'Ô£«</code> - <a href="https://tio.run/##ARkA5v9vc2FiaWX//yfCouKAmifDlMKjwqvDlP//" rel="nofollow noreferrer">Try it online</a>.</li>
 </ol>
+<p><a href="https://tio.run/##S0oszvj/PzmxRMFOITk/JVUvvzgxKTNVwcZGwdXfjcteSeFR2yQFJXu9MC8dLpAIV3lGZk6qQlFqYopCZh5XSj6XgoJ@fkGJPkQjlEIzy0ZBBaw2L/X//0cNcx41THnUsIHrUcPMQ@sPrTq8/tAKrqN7VR41NVo/amp1Aoovy89L5NJ71LDI5NC6KC5DA0tDQ3NDQ1NDA1MF48NbDi/34lIqLi3P5DIzMzIye9TUcmi7rpnNoQ3aR/eFH269sOlR0xp7oClzDy8@vABIHVrGdbHpYpNWhP7hhUDheTmeOVyOFodXOIYc7jncY3d4xeE1QOEZ/v5A4lHLonM7uNQPLXrUMEv98JRDiw@tPjyFCwA" rel="nofollow noreferrer">Try all programs at once.</a></p>
+<p><a href="https://tio.run/##AdMALP9vc2FiaWX//3zigqxTRM60w6VPMM60S@KCrGdQzpj//@KAnOKAlOKAsArigJnCr8Kqw6/CqArFvSTigoE74oKFQgrigKZvbmEKLuKAojTCrloKMTA5MTE3MTE1MTA1IDPDtMOnSgoic3V3aQo2NjIyNuKChMK3LTY8wrArxb5Xw4XQsuKCrD8K4oCdw6PDoOKAncKmCtGC0YIqWC/DoQrigJ5sSWwKQTjDqEFUw4zDjD7DqMOsCuKAmE9P4oCY4oSizrgKJ8Ki4oCaw5knw5TCo8Kr" rel="nofollow noreferrer">Verify all programs use unique characters.</a></p>
 <p><strong>Explanation:</strong></p>
 
 <pre class="lang-python prettyprint-override"><code>“—‰                # Push dictionary string &quot;mi&quot;
@@ -151,7 +153,6 @@
 <li>A lot of useful builtins that enable alternative ways of pushing characters are 2-byte builtins, requiring an <code>.</code>, <code>Å</code>, and/or <code>ž</code>, which unfortunately have all three been used already and can't be freed with an alternative.</li>
 <li>Bytes can definitely be saved here and there, by switching some of the used methods (e.g. the sixth or eight programs with other shorter ones), but since it won't improve the score anyway, it's not worth it. The many <code>i</code>s and <code>o</code>s in the required outputs pose too many problems to increase the score any further at this point, I'm afraid.</li>
 </ol>
-<p><a href="https://tio.run/##AdMALP9vc2FiaWX//3zigqxTRM60w6VPMM60S@KCrGdQzpj//@KAnOKAlOKAsArigJnCr8Kqw6/CqArFvSTigoE74oKFQgrigKZvbmEKLuKAojTCrloKMTA5MTE3MTE1MTA1IDPDtMOnSgoic3V3aQo2NjIyNuKChMK3LTY8wrArxb5Xw4XQsuKCrD8K4oCdw6PDoOKAncKmCtGC0YIqWC/DoQrigJ5sSWwKQTjDqEFUw4zDjD7DqMOsCuKAmE9P4oCY4oSizrgKJ8Ki4oCaw5knw5TCo8Kr" rel="nofollow noreferrer">Verify all programs use unique characters.</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-p0513</code>, score 6, 3694 bytes</h1>
 <h2>mi, 3571 bytes</h2>
