--- a/q/159881.html
+++ b/q/159881.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::QNNN</title>
+    <title>cg::159881</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,7 +26,6 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-  <!-- TXXX -->
 <tr d-ix="0"><td>034</td><td>Arturo</td><td>230410T045407Z</td><td><a href="https://codegolf.stackexchange.com/questions/159881/am-i-a-self-number/259919#259919">chunes</a></td></tr>
 <tr d-ix="1"><td>073</td><td>PowerShell</td><td>230814T161349Z</td><td><a href="https://codegolf.stackexchange.com/questions/159881/am-i-a-self-number/264162#264162">James Fl</a></td></tr>
 <tr d-ix="2"><td>036</td><td>Julia 1.0</td><td>230808T131514Z</td><td><a href="https://codegolf.stackexchange.com/questions/159881/am-i-a-self-number/263883#263883">Ashlin H</a></td></tr>
@@ -844,3 +843,32 @@ or as a <a href="https://tio.run/##MzBNTDJM/V9TVln538flUdOaYH/tw13h/yuVDu9X0LVTO
        W   # min
 </code></pre>
 </div>
+
+<table id="st">
+<!-- Popups content will be added here -->
+</table>
+
+<table id="at">
+<!-- Popups content will be added here -->
+</table>
+
+</div>
+
+
+
+
+
+  <div class="footer">
+      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/159881/">159881</a></b>
+  </div>
+<div class="footer-space">&nbsp;</div>
+
+
+
+<script src="../c.js"> </script>
+</body>
+</html>
+
+
+
+
