--- a/q/132877.html
+++ b/q/132877.html
@@ -952,6 +952,7 @@ from random import*
 
 <p>Remove the <code>X</code> to see <code>"ABBBCCDD"</code>. The <code>X</code> chooses a random element.</p>
 </div>
+<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
