--- a/q/135942.html
+++ b/q/135942.html
@@ -3,7 +3,7 @@
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBTM9J4LK"></script>
 <script src="../g.js"></script>
-    <title>cg::135942</title>
+    <title>cg::QNNN</title>
     <link rel="stylesheet" href="../c.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+  <!-- TXXX -->
 <tr d-ix="0"><td>065</td><td>Julia 0.6</td><td>221015T174354Z</td><td><a href="https://codegolf.stackexchange.com/questions/135942/implement-a-strange-automaton/253269#253269">Ashlin H</a></td></tr>
 <tr d-ix="1"><td>047</td><td>Ruby</td><td>221006T193157Z</td><td><a href="https://codegolf.stackexchange.com/questions/135942/implement-a-strange-automaton/252738#252738">Jordan</a></td></tr>
 <tr d-ix="2"><td>070</td><td>Nim</td><td>221006T162651Z</td><td><a href="https://codegolf.stackexchange.com/questions/135942/implement-a-strange-automaton/252731#252731">Michael </a></td></tr>
@@ -284,32 +285,3 @@ print r+[1]
 
 <p><a href="https://tio.run/##RYoxCsMwDAD3vEJjEnmIPcZ1d71BaLBpIIagGuNS@nq3IUPhuOWufNr@VNc7mRqyllcbJ8MyvPd8bEBrDMSLRH3AselI0935FOLN@oqBzyRzQsYknn5nnB3aVYZSszaoyFZ658WANXD5j3wB" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
 </div>
-
-<table id="st">
-<!-- Popups content will be added here -->
-</table>
-
-<table id="at">
-<!-- Popups content will be added here -->
-</table>
-
-</div>
-
-
-
-
-
-  <div class="footer">
-      <b><a class="nonewtab" href="../">GOLFSCORE/</a><a href="https://codegolf.stackexchange.com/questions/135942/">135942</a></b>
-  </div>
-<div class="footer-space">&nbsp;</div>
-
-
-
-<script src="../c.js"> </script>
-</body>
-</html>
-
-
-
-
