--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/58243.html">16-bit binary grid                              : 0058243</a>
 <a href="q/271853.html">Argument of a complex number (Cops)             : 0271853</a>
 <a href="q/271933.html">nimi ale lon toki pona! (Every word in Toki Pona: 0271933</a>
 <a href="q/63834.html">Count up forever                                : 0063834</a>
