--- a/q/267423.html
+++ b/q/267423.html
@@ -26,6 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
+  <!-- TXXX -->
 <tr d-ix="0"><td>003</td><td>MATL</td><td>240330T220518Z</td><td><a href="https://codegolf.stackexchange.com/questions/267423/output-an-image/272205#272205">DLosc</a></td></tr>
 <tr d-ix="1"><td>006</td><td>Uiua</td><td>231210T222518Z</td><td><a href="https://codegolf.stackexchange.com/questions/267423/output-an-image/267427#267427">Ad&#225;</a></td></tr>
 <tr d-ix="2"><td>041</td><td>C# .NET Core</td><td>231215T170559Z</td><td><a href="https://codegolf.stackexchange.com/questions/267423/output-an-image/268565#268565">jdt</a></td></tr>
@@ -208,6 +209,7 @@ DRAW&quot;D
 </code></pre>
 <p>Or, if you don't consider an image file as a valid submission, any program that outputs the bytes above.</p>
 </div>
+<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
