--- a/q/265231.html
+++ b/q/265231.html
@@ -365,6 +365,7 @@ $.(*5*),0
 <li><code>*</code> at this point, the input and correct multiplier are on the stack so multiply them</li>
 </ul>
 </div>
+<!-- TYYY -->
 
 <table id="st">
 <!-- Popups content will be added here -->
