--- a/q/272523.html
+++ b/q/272523.html
@@ -26,21 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>005</td><td>05AB1E</td><td>240415T065037Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272596#272596">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>069</td><td>sed r</td><td>240414T124105Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272568#272568">guest430</a></td></tr>
-<tr d-ix="2"><td>027</td><td>Python</td><td>240412T173636Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272526#272526">xnor</a></td></tr>
-<tr d-ix="3"><td>013</td><td>Charcoal</td><td>240412T194016Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272530#272530">Neil</a></td></tr>
-<tr d-ix="4"><td>011</td><td>Uiua 0.11.0</td><td>240412T172145Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272524#272524">Tbw</a></td></tr>
-<tr d-ix="5"><td>160</td><td>Python</td><td>240413T165803Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272545#272545">Ali Moam</a></td></tr>
-<tr d-ix="6"><td>005</td><td>Vyxal 3</td><td>240412T172814Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272525#272525">math sca</a></td></tr>
-<tr d-ix="7"><td>031</td><td>JavaScript Node.js</td><td>240412T230903Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272534#272534">l4m2</a></td></tr>
-<tr d-ix="8"><td>033</td><td>APL+WIN</td><td>240412T174554Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272527#272527">Graham</a></td></tr>
-<tr d-ix="9"><td>028</td><td>Zsh</td><td>240413T024738Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272536#272536">GammaFun</a></td></tr>
-<tr d-ix="10"><td>004</td><td>Jelly</td><td>240412T193548Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272529#272529">Jonathan</a></td></tr>
-<tr d-ix="11"><td>023</td><td>Perl 5 pl</td><td>240412T215553Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272532#272532">Xcali</a></td></tr>
-<tr d-ix="12"><td>031</td><td>Google Sheets</td><td>240412T211245Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272531#272531">doubleun</a></td></tr>
+<tr d-ix="0"><td>099</td><td>C gcc</td><td>240415T151500Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272602#272602">Blue</a></td></tr>
+<tr d-ix="1"><td>005</td><td>05AB1E</td><td>240415T065037Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272596#272596">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>069</td><td>sed r</td><td>240414T124105Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272568#272568">guest430</a></td></tr>
+<tr d-ix="3"><td>027</td><td>Python</td><td>240412T173636Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272526#272526">xnor</a></td></tr>
+<tr d-ix="4"><td>013</td><td>Charcoal</td><td>240412T194016Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272530#272530">Neil</a></td></tr>
+<tr d-ix="5"><td>011</td><td>Uiua 0.11.0</td><td>240412T172145Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272524#272524">Tbw</a></td></tr>
+<tr d-ix="6"><td>160</td><td>Python</td><td>240413T165803Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272545#272545">Ali Moam</a></td></tr>
+<tr d-ix="7"><td>005</td><td>Vyxal 3</td><td>240412T172814Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272525#272525">math sca</a></td></tr>
+<tr d-ix="8"><td>031</td><td>JavaScript Node.js</td><td>240412T230903Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272534#272534">l4m2</a></td></tr>
+<tr d-ix="9"><td>033</td><td>APL+WIN</td><td>240412T174554Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272527#272527">Graham</a></td></tr>
+<tr d-ix="10"><td>028</td><td>Zsh</td><td>240413T024738Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272536#272536">GammaFun</a></td></tr>
+<tr d-ix="11"><td>004</td><td>Jelly</td><td>240412T193548Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272529#272529">Jonathan</a></td></tr>
+<tr d-ix="12"><td>023</td><td>Perl 5 pl</td><td>240412T215553Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272532#272532">Xcali</a></td></tr>
+<tr d-ix="13"><td>031</td><td>Google Sheets</td><td>240412T211245Z</td><td><a href="https://codegolf.stackexchange.com/questions/272523/maximum-number-of-trailing-zeros/272531#272531">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 5 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 99 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>m;float f;g(a,b){for(++b;a!=b;a++){f=(float)(a&amp;-a);f=(*(unsigned int*)&amp;f&gt;&gt;23)-0x7f;m=f&gt;m?f:m;}a=m;}
+</code></pre>
+<p>Probably suboptimal but I really, <em>really</em>, <strong>really</strong> wanted to use <a href="https://graphics.stanford.edu/%7Eseander/bithacks.html#ZerosOnRightFloatCast" rel="nofollow noreferrer">this hack</a>...</p>
+<p><a href="https://tio.run/##jU7bCoJAEH1uv2IKlN1cQe1BaFj7kV7Gy4jQbmEKgfTtNuUPNA9nmHPhTJP2TbOuHvl2pwkYe022NgvfR50kNdLeCSSJME7/PEZTnJJBuY96Ds@hD10LQ5iOJuaqKk4mzV4lo3dc@QufPb7JCaxiAU9D0EYtCmR2X4bAQV5aqGUXOW7CYxSJ9YF11NqoNaJF7TUcLJA4LWxPGlS7b7wo8Bc/lUL8Hd2axm6axwAZqrdaPw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 5 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŸÓøнà
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//6I7Dkw/vuLD38IL//6MNzXWMDGMB" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##ATIAzf9vc2FiaWX/dnk/IiDihpIgIj95/8W4w5PDuNC9w6D/LP9bWzE3LDIxXSxbMjIsMzddXQ" rel="nofollow noreferrer">verify both test cases</a>.</p>
@@ -66,7 +74,7 @@
        # (after which it is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> -r, <s>72</s> 69 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> -r, <s>72</s> 69 bytes</h1>
 <pre><code>s/(.*) (.*)/echo 2o{\1..\2}p|dc/e     #converts two numbers into a binary range
 s/.*1(0*)$/\1/gm                      #keep only the last 0s of each line
 s/.*/wc -L&lt;&lt;&lt;&quot;&amp;&quot;/e                    #num of chars in longest line
@@ -80,7 +88,7 @@ s/.*/wc -L&lt;&lt;&lt;&quot;&amp;&quot;/e                    #num of chars in lo
 <p>now we have binary numbers seperated by newlines. this next swap is <code>g</code>lobal and <code>m</code>ultiline. we capture a group of 0s prefixed by <code>1</code> and suffixed by <code>$</code>, ie the last string of 0s of each line, and replace the full line with that group.</p>
 <p>now we have 0s seperated by newlines. we take the full input and send it to <code>wc</code>(word count). <code>-L</code> gives the longest line, which is our output</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 27 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 27 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda a,b:len(bin(-a&amp;b))-3
 </code></pre>
@@ -98,7 +106,7 @@ s/.*/wc -L&lt;&lt;&lt;&quot;&amp;&quot;/e                    #num of chars in lo
 </code></pre>
 <p><a href="https://tio.run/##ZZDPTsMwDMbP9CnCLrOFy3Ar1i6ivAYHxCHRlhJpc6ush3HZq5ckqzQkLr/P8Z/PVsaf6XuQuh3DPLvuaE52b5Qhq0sw7xaHUF4dlFez2VRkI3Du/3adzAWOBwHrBQSxvMfP4TwFP8L6ZY2o3BCUKC8qGOkPEEefGLEoUj69MNU@gRuqGAmqiurXqExtZJ3Z0C6yzWRqInfEqZm3xFv80sXDGLxM4LIhqZt2XZ91WWbuRzBxg7rIt9n/aeWdMm@dVUb2i9fj4qVvi1YfYZBeryh9Bc6/" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 13 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 13 bytes</h1>
 <pre><code>Ｉ⌈Ｅ…·ＮＮ⌕⮌⍘ι²1
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEwzexIjO3NBdIF2h45iXnlBZnlqUGJealpwK5BaUlfqW5SalFGpo6CihcIN8tMy9FIyi1LLWoOFXDKbE4NbgEaGy6RqaOghFIXslQSRMErP//NzTnMjL8r1uWAwA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -132,7 +140,7 @@ s/.*/wc -L&lt;&lt;&lt;&quot;&amp;&quot;/e                    #num of chars in lo
             Implicitly print
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.11.0</a>, 11 bytes <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer" title="SBCS for Uiua 0.11.0">SBCS</a> (updated)</sup></h1>
+<div id="pu5" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua 0.11.0</a>, 11 bytes <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer" title="SBCS for Uiua 0.11.0">SBCS</a> (updated)</sup></h1>
 <pre><code>/↥⊗1⋯+⇡+1-,
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_11_0-dev_1__RiDihpAgKAogICsxLSwgIyBwdXRzIGItYSsxIGFuZCBhIG9uIHN0YWNrCiAg4oehICAgICMgcmFuZ2UgWzAgLi4uIGItYSsxXQogICsgICAgIyBhZGQgYSB0byBnZXQgW2EgLi4uIGJdCiAg4ouvICAgICMgZ2V0IGxpdHRsZS1lbmRpYW4gYmluYXJ5IG9mIGVhY2gKICDiipcxICAgIyBnZXQgaW5kZXggb2YgZmlyc3QgMSBpbiBlYWNoCiAgL-KGpSAgICMgbWF4aW11bQopCgpGIDIxIDE3Cg==" rel="nofollow noreferrer">Try on Uiua Pad!</a></p>
@@ -150,7 +158,7 @@ s/.*/wc -L&lt;&lt;&lt;&quot;&amp;&quot;/e                    #num of chars in lo
 </code></pre>
 <p>Direct port of @xnor's answer. Takes <code>a b</code>.</p>
 </div>
-<div id="pu5" class="pu"><h1>Python, 160 bytes</h1>
+<div id="pu6" class="pu"><h1>Python, 160 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>a, b = 17, 21
 max_zeros = 0
 
@@ -162,7 +170,7 @@ print(max_zeros)
 </code></pre>
 <p>The expression <code>num &amp; -num</code> finds the rightmost set bit of <code>num</code>. <code>-num</code> is the 2's complement of <code>num</code>, which flips all the bits of <code>num</code> and adds 1 to it.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 5 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 5 bytes</h1>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/272526">xnors' answer</a></p>
 <pre><code>v⊻bLv
 </code></pre>
@@ -175,19 +183,19 @@ v⊻     # ‎⁡xor(a-1, b)
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 31 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 31 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(a,b)=&gt;a&gt;b?-1:1+f(a+1&gt;&gt;1,b/2)
 </code></pre>
 <p><a href="https://tio.run/##bcpBCoAgEADAey9RWos1MAi0t6ylUYRGRt83r1HXYTa6KU3nelwixNnl7DUjsFwbMnYUOGDtGdVoDIJtJc9TDCnurtnjwjzDHiRyXr1VSuj6j5aLP6oAVdH8AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu8" class="pu"><h1>APL+WIN, 33 bytes.</h1>
+<div id="pu9" class="pu"><h1>APL+WIN, 33 bytes.</h1>
 <p>Prompts for lower then higher integer. Index origin=0</p>
 <pre><code>⌈/+⌿~∨⍀⊖((⌈2⍟n)⍴2)⊤m+⍳1+(n←⎕)-m←⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3t/6OeDn3tRz376x51rHjU2/Coa5qGBlDM6FHv/DzNR71bjDQfdS3J1X7Uu9lQWyMPqA@oX1M3F8L4DzSC638al6E5l5EhVxqXkRGXsTkA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 28 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 28 bytes</h1>
 <p>Port of @xnor's Python solution. Returns via exit code.</p>
 
 <pre class="lang-sh prettyprint-override"><code>l=$[[#2]($1-1)^$2]
@@ -195,7 +203,7 @@ bye $#l-3
 </code></pre>
 <p><a href="https://tio.run/##qyrO@J@moanxP8dWJTpa2ShWQ8VQ11AzTsUoliupMlVBRTlH1/i/JleagqG5gpGhtUJqcka@goo9UMDISMHYHC7wHwA" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 4 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 4 bytes</h1>
 <pre><code>rọ2Ṁ
 </code></pre>
 <p>A dyadic Link that accepts two positive integers, <span class="math-container">\$a\$</span> and <span class="math-container">\$b\$</span>, and yields the maximal number of least-significant zeros of the binary representations of the range <span class="math-container">\$[a, b]\$</span>.</p>
@@ -213,14 +221,14 @@ r    - {a} inclusive range {b} -&gt; [a..b]
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8//9Rw8w4Jx8g@d/E4tDqw8sP7T45/fC@hCj3/wA" rel="nofollow noreferrer">TIO</a></p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-pl</code>, 23 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-pl</code>, 23 bytes</h1>
 <p>Same idea as @xnor's answer but uses the power of 2 rather than bitstring length to save bytes.</p>
 
 <pre class="lang-perl prettyprint-override"><code>$_=0|log(--$_^&lt;&gt;)/log 2
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9/18l3tagJic/XUNXVyU@zsZOUx/IUTD6/9/YiMvY6F9@QUlmfl7xf11fUz0DQ4P/ugU5AA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu12" class="pu"><h1>Google Sheets, 31 bytes</h1>
+<div id="pu13" class="pu"><h1>Google Sheets, 31 bytes</h1>
 <pre><code>=len(base(bitxor(A1-1,B1),2))-1
 </code></pre>
 <p>Put the input in cells <code>A1:B1</code> and the formula in <code>C1</code>.</p>
