--- a/q/273875.html
+++ b/q/273875.html
@@ -49,6 +49,7 @@
    ⍜ₙ⇡2      # 2^( range( log_2( that )))   [1 2 4 8]
 ⊕□⊚          # group into pieces that size  {&quot;a&quot; &quot;bc&quot; &quot;defg&quot; &quot;hijklmno&quot;}
 </code></pre>
+<p><code>⍜ₙ⇡2</code> means range (<code>⇡</code>) &quot;under&quot; (<code>⍜</code>) logarithm <code>ₙ</code> base 2. <code>⍜</code> applies a function, then a second function, and then the inverse of that first function. Here, we apply <code>log_2(x)</code>, then <code>range</code>, and then the inverse of <code>log_2(x)</code> which is <code>2^x</code>.</p>
 <p>Literally, <code>⊕□⊚</code> does:</p>
 <pre><code>     #                              [1 2 4 8]
 ⊚    # these repeat the naturals:   [0 1 1 2 2 2 2 3 3 3 3 3 3 3 3]
